--- a/Origamid/projetoCaravan.html
+++ b/Origamid/projetoCaravan.html
@@ -45,7 +45,7 @@
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">Login</a>
+            <a href="#" data-toggle="modal" data-target="#modalLogin" class="nav-link">Login</a>
           </li>
 
           <li class="nav-item">
@@ -276,6 +276,34 @@
         <p class="mb-0">Caravan © 2017. Alguns direitos reservados.</p>
       </div>
     </footer>
+
+    <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="modalLoginTitulo" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalLoginTitulo">Entre na Sua Conta</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="loginEmail">Email</label>
+                <input type="email" class="form-control" id="loginEmail">
+              </div>
+              <div class="form-group">
+                <label for="loginSenha">Senha</label>
+                <input type="password" class="form-control" id="loginSenha">
+              </div>
+              <button type="submit" class="btn btn-primary">Entrar na Conta</button>
+              <small class="form-text text-muted">Esqueceu a senha? <a href="#">Clique aqui</a>.</small>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Fecha Modal  -->
     
     <!-- scripts do bootstrap -->
     <!-- Optional JavaScript -->
