Finalização do projeto

--- a/Origamid/inscricao.html
+++ b/Origamid/inscricao.html
@@ -16,7 +16,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top py-3 box-shadow">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./projetoCaravan.html">
         <img src="./img/caravan.svg" alt="Caravan">
       </a>
 
@@ -59,7 +59,7 @@
     <section class="container">
       <div class="my-5 text-center">
         <span class="h6 d-block">PROGRAME A VIAGEM DOS SEUS SONHOS</span>
-        <h1 class="display-4 text-primary">Increva-se</h1>
+        <h1 class="display-4 text-primary text-uppercase">Increva-se</h1>
       </div>
 
       <div class="row">
@@ -120,9 +120,133 @@
   
           </form>
   
-          <div class="bg-light rounded box-shadow p-3 form-group">
-  
+          <form class="bg-light box-shadow p-3 form-group">
+            <h2 class="h6 text-primary mb-3">FORMA DE PAGAMENTO</h2>
+            <nav class="nav btn-group mb-4" id="formaPagamento" role="tablist">
+              <button type="button" class="btn btn-secondary rounded active btn-sm mr-5" id="nav-credito-tab" data-toggle="tab" href="#nav-credito" role="tab" aria-controls="nav-credito" aria-selected="true">Cartão de Crédito</button>
+              <button type="button" class="btn btn-secondary rounded btn-sm" id="nav-boleto-tab" data-toggle="tab" href="#nav-boleto" role="tab" aria-controls="nav-boleto" aria-selected="true">Boleto Bancário</button>
+            </nav>
+            <div class="tab-content" id="formaPagamentoConteudo">
+              <div class="tab-pane fade show active" id="nav-credito" role="tabpanel" aria-labelledby="nav-credito-tab">
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="inputNomeCartao">Nome</label>
+                    <input type="text" class="form-control" id="inputNomeCartao" placeholder="Nome impresso no cartão">
+                  </div>
+                  <div class="form-group col-md-3 col-6">
+                    <label for="inputMes">Mês</label>
+                    <select class="form-control" id="inputMes">
+                      <option>Expira no mês...</option>
+                      <option>01</option>
+                      <option>02</option>
+                      <option>03</option>
+                      <option>04</option>
+                      <option>05</option>
+                      <option>06</option>
+                      <option>07</option>
+                      <option>08</option>
+                      <option>09</option>
+                      <option>10</option>
+                      <option>11</option>
+                      <option>12</option>
+                    </select>
+                  </div>
+                  <div class="form-group col-md-3 col-6">
+                    <label for="inputAno">Ano</label>
+                    <select class="form-control" id="inputAno">
+                      <option>Expira no ano...</option>
+                      <option>2022</option>
+                      <option>2023</option>
+                      <option>2024</option>
+                      <option>2025</option>
+                      <option>2026</option>
+                      <option>2027</option>
+                      <option>2028</option>
+                    </select>
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="inputNumeroCartao">Número do cartão</label>
+                    <input type="text" class="form-control" id="inputNumeroCartao" placeholder="0000 0000 0000 0000">
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="inputCodigo">Código de segurança</label>
+                    <input type="text" class="form-control" id="inputCodigo" placeholder="XXX">
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane fade" id="nav-boleto" role="tabpanel" aria-labelledby="nav-boleto-tab">
+                <p class="lead"> Clique em contratar plano que enviaremos um boleto para o seu email. </p>
+              </div>
+            </div>
+          </form>
+
+          <div class="form-check mb-4">
+            <label class="form-check-label">
+              <input type="checkbox" class="form-check-input">
+              Concordo com os <a href="#">Termos e Condições</a> 
+            </label>
           </div>
+
+          <button type="submit" class="btn btn-primary btn-md"> Contratar Plano </button>
+
+        </div>
+
+        <div class="col-lg-6 order-first order-lg-1">
+          <h2 class="h6 text-primary">PLANO ESCOLHIDO</h2>
+            <div class="bg-light rounded p-4 box-shadow mb-4">
+              <h2>Gold</h2>
+              <ul class="plano__lista list-unstyled">
+                <li class="">→ 30 dias de viagem</li>
+                <li>→ 3 destinos diferentes</li>
+                <li>→ Tudo pago pela empresa</li>
+                <li>→ Ingressos para festas</li>
+              </ul>
+              <form action="">
+                <div class="form-group">
+                  <select class="form-control bg-light" id="inputCidades">
+                    <option>Selecione a cidade</option>
+                    <option>California</option>
+                    <option>Paris</option>
+                    <option>Dublin</option>
+                  </select>
+                </div>
+              </form>
+  
+              <div class="row mt-4">
+                <div class="col">
+                  <span class="h4">R$5.000</span>
+                </div>
+              </div>
+  
+            </div>
+  
+            <div class="bg-light rounded p-4 box-shadow mb-4 mb-lg-0">
+              <h2>Platinum <span class="badge badge-success">Novo</span>
+              </h2>
+              <ul class="plano__lista list-unstyled">
+                <li class="">→ 30 dias de viagem</li>
+                <li>→ 3 destinos diferentes</li>
+                <li>→ Tudo pago pela empresa</li>
+                <li>→ Ingressos para festas</li>
+              </ul>
+              <form action="">
+                <div class="form-group">
+                  <select class="form-control bg-light" id="inputCidades">
+                    <option>Selecione a cidade</option>
+                    <option>California</option>
+                    <option>Paris</option>
+                    <option>Dublin</option>
+                  </select>
+                </div>
+              </form>
+  
+              <div class="row mt-4">
+                <div class="col">
+                  <span class="h4">R$15.000</span>
+                </div>
+              </div>
+  
+            </div>
 
         </div>
 
