--- a/Origamid/local.html
+++ b/Origamid/local.html
@@ -16,7 +16,7 @@
   <body>
     
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top py-3 box-shadow">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./projetoCaravan.html">
         <img src="./img/caravan.svg" alt="Caravan">
       </a>
 
