--- a/Origamid/planos.html
+++ b/Origamid/planos.html
@@ -16,7 +16,7 @@
   <body>
     
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top py-3 box-shadow">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./projetoCaravan.html">
         <img src="./img/caravan.svg" alt="Caravan">
       </a>
 
@@ -68,7 +68,7 @@
           <div class="bg-light rounded p-4 box-shadow">
             <h2>Gold</h2>
             <ul class="plano__lista list-unstyled">
-              <li class="">→ 30 dias de viagem</li>
+              <li><span data-toggle="tooltip" data-placement="right" title="Serão 30 dias corridos de viagem, incluindo os deslocamentos">→ 30 dias de viagem</span></li>
               <li>→ 3 destinos diferentes</li>
               <li>→ Tudo pago pela empresa</li>
               <li>→ Ingressos para festas</li>
@@ -101,7 +101,7 @@
             <h2>Platinum <span class="badge badge-success">Novo</span>
             </h2>
             <ul class="plano__lista list-unstyled">
-              <li class="">→ 30 dias de viagem</li>
+              <li>→ 30 dias de viagem</li>
               <li>→ 3 destinos diferentes</li>
               <li>→ Tudo pago pela empresa</li>
               <li>→ Ingressos para festas</li>
